# OmniRift

./: .gitignore  .gitleaks.toml  .omniforge  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  package-lock.json  package.json
.claude/: plugins.json  settings.json
.claude/commands/: audit.md
.claude/hooks/: verify-skills.sh
.forgejo/: review-context.md  review-suppress.json
.forgejo/workflows/: ci.yml  code-review-ai.yml.disabled
.github/workflows/: ci.yml  release.yml
apps/desktop/: eslint.config.js  index.html  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
apps/desktop/scripts/: run-action-trail-tests.mjs  run-boot-armor-tests.mjs  run-goal-budget-tests.mjs  run-grab-tests.mjs  run-laziness-tests.mjs  run-license-tests.mjs  run-pipeline-edit-tests.mjs  run-pty-session-registry-tests.mjs  run-shell-tests.mjs  run-speculative-compact-tests.mjs  run-terminal-query-authority-tests.mjs
apps/desktop/src/: App.tsx  index.css  main.tsx  monaco-esm.d.ts
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.dev-install.conf.json  tauri.linux.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/cli/: Cargo.toml
apps/desktop/src-tauri/cli/src/: client.rs  handlers.rs  main.rs  specs.rs
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: audio.rs  db.rs  lib.rs  main.rs  proc_ext.rs  proc_win.rs  redactor.rs  sandbox.rs  spec.rs
apps/desktop/src-tauri/src/acp/: mod.rs
apps/desktop/src-tauri/src/agents/: mod.rs
apps/desktop/src-tauri/src/code/: chunk.rs  file_io.rs  metrics.rs  mod.rs
apps/desktop/src-tauri/src/commands/: acp.rs  agent_docs.rs  browser.rs  clis.rs  code.rs  compress.rs  constructor_chat.rs  dbnode.rs  debug.rs  debug_log.rs  debug_mode.rs  diagnostics.rs  editor.rs  explain.rs  folder_canvas.rs  fs.rs  fsinfo.rs  git.rs  git_secret.rs  github_auth.rs  gitremote.rs  graphify.rs  hosts.rs  http.rs  license.rs  llm.rs  mcp.rs  mcp_servers.rs  memory.rs  metrics.rs  mod.rs  observability.rs  omnifs.rs  omnigraph.rs  omniswitch.rs  orchestrator.rs  pipeline.rs  portal.rs  providers.rs  pty.rs  (+13 more)
apps/desktop/src-tauri/src/compress/: headroom.rs  mod.rs  omnicompress.rs  provider.rs  proxy.rs  rtk.rs  savings.rs  types.rs
apps/desktop/src-tauri/src/git/: mod.rs
apps/desktop/src-tauri/src/health/: ai.rs  backup.rs  db.rs  db_live.rs  mod.rs  scan.rs
apps/desktop/src-tauri/src/learn/: mod.rs
apps/desktop/src-tauri/src/llm_router/: engine.rs  forward.rs  health.rs  keys.rs  mod.rs  server.rs  table.rs
apps/desktop/src-tauri/src/mcp/: claims.rs  client.rs  groups.rs  marker.rs  mod.rs  prewarm.rs  registry.rs  serena_pool.rs  server.rs  tools.rs
apps/desktop/src-tauri/src/memory/: local.rs  mod.rs  obsidian.rs  omnimemory.rs  provider.rs  registry.rs  secret_store.rs  types.rs
apps/desktop/src-tauri/src/metrics/: gpu.rs  mod.rs  sampler.rs  system.rs
apps/desktop/src-tauri/src/observability/: event.rs  mod.rs  store.rs
apps/desktop/src-tauri/src/omnifs/: mod.rs  mounts.rs
apps/desktop/src-tauri/src/orchestrator/: mod.rs
apps/desktop/src-tauri/src/pty/: detector.rs  emulator.rs  host.rs  manager.rs  mod.rs  profile.rs  session.rs  text.rs
apps/desktop/src-tauri/src/rpc/: allowlist.rs  core.rs  devices.rs  e2ee.rs  keypair.rs  metadata.rs  methods.rs  mod.rs  pairing.rs  relay_client.rs  socket.rs  ws.rs
apps/desktop/src-tauri/src/turbo/: commands.rs  driver.rs  mod.rs
apps/desktop/src-tauri/windows/: hooks.nsh
apps/landing/: .gitignore  index.html  package.json  tsconfig.json  vite.config.ts
apps/landing/public/: 404.html  _headers  contato.html  lgpd.html  llms-full.txt  llms.txt  privacidade.html  robots.txt  sitemap.xml  sobre.html  termos.html
apps/landing/src/: AgentCanvas.tsx  Landing.tsx  index.css  main.tsx  theme.ts
apps/relay-worker/: package.json  tsconfig.json  wrangler.toml
apps/relay-worker/src/: index.ts  room.ts
apps/relay-worker/test/: index.test.ts  room.test.ts
docs/: 2026-07-19-auditoria-completa.md  2026-07-19-auditoria-performance-usabilidade-fluidez-v0.1.141.md  2026-07-19-revisao-release-v0.1.140.md  RELEASE.md  STATUS.md  ci-macos-gatekeeper-release-snippet.md  macos-gatekeeper.md  napkin.md  omniagent-acp-features.md  pendencias-omnirift.md
docs/database/: db-manager-plan.md
docs/features/: 2026-07-17-seguranca-e-acolhimento-iron-man.md
docs/integrations/: vscode-cursor-v2.md
docs/memory/: obsidian-hindsight-providers.md
docs/registry/: r2.yaml
docs/research/: 2026-06-24-orca-teardown-learnings.md  2026-07-18-agent-flow-teardown-learnings.md  2026-07-18-codewhale-integration-assessment.md  2026-07-18-teardowns-critique.md  2026-07-19-failproof-v2-plugin.md
docs/research/orca-re/: 00-index.md  01-agent-hooks.md
docs/reverse-engineering/: 2026-06-14-maestri-mac-0.29.5-teardown.md
docs/superpowers/: 2026-06-15-fase1b-conexoes-status-e-auditoria.md  2026-07-09-orquestracao-STATUS.md
docs/superpowers/plans/: 2026-06-12-herdr-detection-engine.md  2026-06-12-herdr-orchestration-api.md  2026-06-15-fase1-memory-provider-backend.md  2026-06-17-fase9-code-workspace-debug-ia.md  2026-06-25-terminal-backend-owned.md  2026-06-29-fase1-relay-tunnel.md  2026-07-02-fase9-aprender-execucao.md  2026-07-02-graphify-visao-completa.md  2026-07-02-omnigraph-visao-completa.md  2026-07-04-aprender-a2-a4-refinado.md  2026-07-05-failproof.md  (+13 more)
logs_clientes/: omnirift-diagnostico-20260719-143512.txt
scripts/: beta-renew.mjs  build-omnicompress.sh  build-omnifs-sidecar.sh  ci-code-review.py  install-macos-dev.sh  install-macos.sh  local-review.py  macos-adhoc-codesign.sh  macos-repack-dmg.sh  macos-verify-seal.sh  omnirift-anti-patterns.py  quality-baseline.sh  quality-baseline.txt  set-version.mjs  smoke-boot.sh
services/license-worker/: DEPLOY.md  package-lock.json  package.json  schema.sql  tsconfig.json  vitest.config.ts  wrangler.toml
tools/: omnirift-keygen.mjs
tools/failproof/: README.md  claim_judge.py  evidence_lint.py  failbase.py  failbase_ci.py  install.sh  uninstall.sh  watchdog.py
(+386 files in other folders)
