[package]
name = "maestri-linux"
version = "0.1.0"
description = "Maestri Linux — AI Agent Orchestration Canvas"
authors = ["OmniForge <contato@omniforge.com.br>"]
license = "MIT"
repository = "https://git.omnimemory.com.br/jesse_freitas/maestri_linux"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "maestri_linux_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.1" }
tauri-plugin-log = "2"
# PTY — terminal management
portable-pty = "0.8"
# Async runtime
tokio = { version = "1", features = ["full"] }
# State management
dashmap = "6"
# UUID for node identity
uuid = { version = "1", features = ["v4"] }
# Error handling
anyhow = "1"
