[package]
name = "omnirift"
version = "0.1.0"
description = "OmniRift — AI Agent Orchestration Canvas"
authors = ["OmniForge <contato@omniforge.com.br>"]
license = "MIT"
repository = "https://git.omnimemory.com.br/jesse_freitas/maestri_linux"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "omnirift_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.1", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
# PTY — the heart of the agent terminals
portable-pty = "0.9"
# Emulador de tela VT100 — renderiza a tela visível de TUIs (Claude Code/Codex)
vt100 = "0.15"
# Persistência do canvas (Fase 3) — SQLite embutido (sem dep de sistema)
rusqlite = { version = "0.32", features = ["bundled"] }
# Async runtime
tokio = { version = "1", features = ["full"] }
# Concurrency — DashMap + parking_lot Mutex (faster than std)
dashmap = "6"
parking_lot = "0.12"
# Regex para padrões de detecção de estado de agente
regex = "1"
# Error handling
anyhow = "1"
thiserror = "2"
# Logging
env_logger = "0.11"
# MCP server embutido
axum = { version = "0.7", features = ["json"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
# Cliente HTTP pro API node (roda no Rust → não pega o TLS quebrado do WebKitGTK).
# rustls em vez de native-tls pra não depender do OpenSSL do sistema.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "json"] }
# async em trait objects (dyn MemoryProvider)
async-trait = "0.1"
# Licença: chave assinada Ed25519 verificada offline (só a chave pública é embutida)
ed25519-dalek = "2"
sha2 = "0.10"
base64 = "0.22"
# Keychain do SO (Fase 2 da memória plugável) — tokens fora do SQLite.
# sync-secret-service: API síncrona via Secret Service no Linux (runtime: libdbus-1,
# universal em desktops); crypto-rust: RustCrypto p/ a sessão (sem OpenSSL de sistema).
# Degrada gracioso se não houver daemon de keychain — ver memory/secret_store.rs.
keyring = { version = "3", default-features = false, features = ["sync-secret-service", "crypto-rust"] }
# Fase 9 — CodeNode & Debug IA: parser AST + métricas + file watch.
# tree-sitter: parser incremental; grammars das 3 linguagens do próprio OmniRift.
# (Se o build falhar por ABI, alinhar versões runtime↔grammar — ver plano Task 1.)
tree-sitter = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"
notify = "8"
notify-debouncer-mini = "0.6"
# Monitor de recursos (CPU/RAM/disco/rede) — sub-fase A. GPU (NVML) entra na fase C.
sysinfo = "0.33"

[dev-dependencies]
tempfile = "3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
