# Workspace — este pacote (o app Tauri) é a raiz; o CLI fino (ref #8B) é membro.
# Mantém o `target/` aqui (build do Tauri intocado) e deixa `cargo build -p omnirift-cli`
# compartilhar a resolução de deps. O CLI vive em `cli/` (NÃO depende do tauri); fica
# sob src-tauri porque o Cargo exige membros hierarquicamente abaixo da raiz.
[workspace]
members = ["cli"]
# A CLI (omnirift) é membro mas NÃO entra nos comandos default (test/xwin check sem -p) —
# ela é Linux-only (UnixStream; named-pipe Windows = fase 2), então fica fora do
# `cargo xwin check` Windows da CI (que roda no manifesto raiz). Testa-se via `-p omnirift-cli`.
default-members = ["."]

[package]
name = "omnirift"
version = "0.1.138"
description = "OmniRift - canvas infinito para orquestrar agentes de IA, terminais e notas"
authors = ["OmniForge <contato@omniforge.com.br>"]
license = "MIT"
repository = "https://git.omnimemory.com.br/jesse_freitas/maestri_linux"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "omnirift_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
# Parser TOML — usado pelo import de agente Codex (.toml → Role). Edição leve.
toml = "0.8"
log = "0.4"
tauri = { version = "2.11.1", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
# Auto-update: baixa/verifica releases assinados (minisign) via reqwest nativo —
# fora do WebKitGTK (TLS quebrado). process = relaunch após instalar o update.
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
# Leitura de bytes de arquivo local (PdfNode → readFile → Uint8Array p/ pdf.js).
tauri-plugin-fs = "2"
# PTY — the heart of the agent terminals
portable-pty = "0.9"
# Emulador de tela VT100 — renderiza a tela visível de TUIs (Claude Code/Codex)
vt100 = "0.15"
# Emulador VT headless backend-owned (ref P0 #2): grid + scrollback bounded como
# fonte da verdade; o front vira view descartável. Term + Grid + vte::ansi::Processor
# (parser ANSI stateful). VoidListener = não responde queries (DA1/DSR) → só o xterm
# do front responde, sem duplicar na stdin do shell. Ver pty/emulator.rs.
alacritty_terminal = "0.26"
# Persistência do canvas (Fase 3) — SQLite embutido (sem dep de sistema)
rusqlite = { version = "0.32", features = ["bundled"] }
# Async runtime
tokio = { version = "1", features = ["full"] }
# Concurrency — DashMap + parking_lot Mutex (faster than std)
dashmap = "6"
parking_lot = "0.12"
# Regex para padrões de detecção de estado de agente
regex = "1"
# Error handling
anyhow = "1"
thiserror = "2"
# Logging — log em arquivo (rotação) + stdout via tauri-plugin-log: grava no app log
# dir do SO ("omnirift.log") e os `log::` existentes (info/error/etc.) passam a ir
# pro arquivo também. Substitui o env_logger (um único logger global por processo).
tauri-plugin-log = "2"
# MCP server embutido
axum = { version = "0.7", features = ["json"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"
# Corpo de request/response como Bytes (OmniSwitch forward). Já vem transitivamente
# por reqwest/axum; declarado direto pra usar `bytes::Bytes` no forward.
bytes = "1"
uuid = { version = "1", features = ["v4"] }
# Cliente HTTP pro API node (roda no Rust → não pega o TLS quebrado do WebKitGTK).
# rustls em vez de native-tls pra não depender do OpenSSL do sistema.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "json", "stream"] }
# async em trait objects (dyn MemoryProvider)
async-trait = "0.1"
# Licença: chave assinada Ed25519 verificada offline (só a chave pública é embutida)
ed25519-dalek = "2"
sha2 = "0.10"
base64 = "0.22"
# Keychain do SO (Fase 2 da memória plugável) — tokens fora do SQLite.
# sync-secret-service: API síncrona via Secret Service no Linux (runtime: libdbus-1,
# universal em desktops); crypto-rust: RustCrypto p/ a sessão (sem OpenSSL de sistema).
# Degrada gracioso se não houver daemon de keychain — ver memory/secret_store.rs.
keyring = { version = "3", default-features = false, features = ["sync-secret-service", "crypto-rust"] }
# Fase 9 — CodeNode & Debug IA: parser AST + métricas + file watch.
# tree-sitter: parser incremental; grammars das 3 linguagens do próprio OmniRift.
# (Se o build falhar por ABI, alinhar versões runtime↔grammar — ver plano Task 1.)
tree-sitter = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"
# +7 grammars pro chunker AST (code/chunk.rs). Versões alinhadas ao runtime 0.25.
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-php = "0.23"
notify = "8"
notify-debouncer-mini = "0.6"
# Painel "Saúde do Projeto" (Fase A) — caminhada de diretório respeitando `.gitignore`
# (mesmo motor do ripgrep): pula node_modules/target/dist/.git automaticamente.
ignore = "0.4"
# Painel "Saúde do Projeto" (Fase B) — parser de DDL SQL (CREATE TABLE) das
# migrations/.sql do repo. GenericDialect cobre Postgres/MySQL/SQLite o suficiente
# pra extrair tabelas/colunas/PK/FK/índices. Fail-soft: SQL que não parsear vira aviso.
sqlparser = "0.62"
# Painel "Saúde do Projeto" (Fase C) — Banco de Dados AO VIVO. SQLite via rusqlite
# (já presente, bundled — reusado). Postgres via tokio-postgres (LEVE, async puro,
# sem o peso do sqlx). TLS via rustls (sem OpenSSL de sistema, igual ao reqwest) p/
# Postgres em nuvem; conexões locais usam NoTls (fallback automático).
tokio-postgres = "0.7"
tokio-postgres-rustls = "0.13"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
# Monitor de recursos (CPU/RAM/disco/rede) — sub-fase A. GPU (NVML) entra na fase C.
sysinfo = "0.33"
# --- Mobile companion (relay LAN + E2EE) — ref #9 (rpc/ws.rs, rpc/e2ee.rs) ---
# Servidor WebSocket de LAN embutido (ws:// cru; a confidencialidade é E2EE de app,
# não TLS — RN não pina cert). default-features = false: SEM TLS (não puxa native-tls
# nem duplicar rustls); só o transporte WS plain sobre tokio.
tokio-tungstenite = { version = "0.24", default-features = false, features = ["handshake", "rustls-tls-webpki-roots", "connect"] }
# E2EE NaCl box (X25519 ECDH + XSalsa20-Poly1305) — interop byte-a-byte com tweetnacl
# do app Expo/RN (fase 2). `SalsaBox` = exatamente o `nacl.box`. rand_core 0.6 (alinhado
# com o curve25519-dalek já no tree via ed25519-dalek).
crypto_box = { version = "0.9", features = ["std"] }
# RNG do SO p/ nonce E2EE (24B único por frame) + device token (24B hex). rand 0.8 já
# está no tree (compatível com o rand_core 0.6 do crypto_box).
rand = "0.8"
# Descoberta do IP de LAN do desktop p/ o endpoint do pairing offer (ws://<lan-ip>:6768).
# Leve, sem deps pesadas; degrada p/ 127.0.0.1 se não achar interface.
local-ip-address = "0.6"
# Datas: cutoff do filtro por período + carimbo do ledger nativo (RFC3339 comparável
# aos timestamps ISO das sessões dos CLIs). default-features off + clock = leve.
chrono = { version = "0.4", default-features = false, features = ["clock"] }
# Áudio da intro FRIDAY tocado pelo backend (o WebKitGTK não roteia Web Audio no Linux).
# default-features=false: só o output (cpal→ALSA/Pulse) + SamplesBuffer; sem decoders (síntese pura).
rodio = { version = "0.19", default-features = false, features = ["wav"] }
tauri-plugin-clipboard-manager = "2.3.2"

# Registro do Windows (App Paths de editores) via API — sem subprocess `reg query`.
[target.'cfg(windows)'.dependencies]
winreg = "0.52"

# libc (unix) — PR_SET_PDEATHSIG (linux-only, atrás de cfg no código) + statvfs
# pro guard de disco do OmniFS (linux+macOS): escrever num FUSE com disco cheio
# CONGELA o mount (ENOTCONN em cascata), então checamos espaço livre antes.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
