[package]
name = "omnirift-cli"
version = "0.1.35"
description = "CLI fina do OmniRift (ref #8B) — pilota o app via socket RPC local."
authors = ["OmniForge <contato@omniforge.com.br>"]
license = "MIT"
repository = "https://git.omnimemory.com.br/jesse_freitas/maestri_linux"
edition = "2021"
rust-version = "1.77.2"

# Artefato `omnirift-cli` (NÃO `omnirift`): o app desktop também produz um bin `omnirift`
# e o workspace compartilha `target/`, então nomes iguais se sobrescreviam. O comando que o
# usuário digita continua `omnirift` (help hardcoda; ao shipar a CLI instala-se o artefato
# `omnirift-cli` COMO `omnirift`). Casca fina: descobre o app via runtime.json, conecta o
# socket Unix do RPC (#8A) e formata. NÃO depende do tauri — só serde/serde_json + std.
[[bin]]
name = "omnirift-cli"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
